exports[`Alert Danger 1`] = `
<withState(Alert)
  bsStyle="danger">
  Test
</withState(Alert)>
`;

exports[`Alert click on title 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
    }
  }>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "float": "right",
      }
    }>
    errors
  </Button>
</div>
`;

exports[`Alert click on title 2`] = `
<div
  style={
    Object {
      "overflow": "auto",
    }
  }>
  <Alert
    bsClass="alert"
    bsStyle="info"
    closeLabel="Close alert"
    onDismiss={[Function]}>
    Test
  </Alert>
</div>
`;

exports[`Alert not closeable 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
    }
  }>
  <Alert
    bsClass="alert"
    bsStyle="info"
    closeLabel="Close alert">
    Test
  </Alert>
</div>
`;

exports[`Alert not visible 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
    }
  }>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "float": "right",
      }
    }>
    errors
  </Button>
</div>
`;

exports[`Alert visible 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
    }
  }>
  <Alert
    bsClass="alert"
    bsStyle="info"
    closeLabel="Close alert"
    onDismiss={[Function]}>
    Test
  </Alert>
</div>
`;
